--- a/src/list/ListItem.css
+++ b/src/list/ListItem.css
@@ -12,3 +12,23 @@
     color: grey;
     margin-bottom: 10px;
 }
+
+
+.list-title {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.list-title label {
+    color: black;    
+}
+
+
+.list-title > label {
+    cursor: pointer;
+    font-size: 12px;
+    color: blue;    
+    position: relative;
+    white-space: nowrap;
+}
