--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,7 +2,7 @@
 .app-header {
     background: blue;
     color: white;
-    padding: 10px;
+    padding: 20px;
     top: 0;
     left: 0;
     position: relative;
@@ -18,4 +18,5 @@
 
 .app-header span {
     padding-right: 30px;
+    cursor: pointer;
 }
