--- a/src/components/Tools.css
+++ b/src/components/Tools.css
@@ -8,3 +8,12 @@
     font-size: 14px;
 
 }
+
+.refresh-button{
+    background-color: green;
+    border-radius: 10px;
+    border: none;
+    margin-left: 30px;
+    padding: 10px 20px ;
+    color: white;
+}
